# PurpleMonkeyFella

./: CMakeLists.txt  INSTALL.md  PurpleMonkeyFella.pro  README.md  main.cpp  qml.qrc
.github/workflows/: 10-bonzi-build.yml
src/: MonkeyFella.qml  externalcalls.cpp  externalcalls.h  main.cpp  main.qml  qml.qrc  randomevents.cpp  randomevents.h  speech.cpp  speech.h
wasm/: Purple.js  PurpleMonkeyFella.html
